Load image for a random location out of DB works now. Add errorhandling in SearchServer API, improve error handling in WMS-API.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@
 
 ### AerialGuessr: Files to be ignored ###
 images/
+scriptLogic/images
 aktuellesBild.jpg
+config.txt
+/scriptLogic/config.txt
 
 
 ### PyCharm ###
