Clean up project files, create folders for better redability, add sql file to create database. Add test data to database.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ images/
 scriptLogic/images
 aktuellesBild.jpg
 config.txt
-/scriptLogic/config.txt
+/scriptLogic/consolecolor/config.txt
 
 
 ### PyCharm ###
@@ -161,7 +161,7 @@ MANIFEST
 *.manifest
 *.spec
 
-# Installer logs
+# Installer logging
 pip-log.txt
 pip-delete-this-directory.txt
 
