Prepare import SQL script for new users to quickly import all the game data.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 ### AerialGuessr: Files to be ignored ###
 images/
 scriptLogic/images
+addressChecker/
 aktuellesBild.jpg
 config.txt
 /scriptLogic/consolecolor/config.txt
